one line of explanation

--- a/PracticalEssentialsCourseUnsupervisedLearning_Part2_21Sep2023.Rmd
+++ b/PracticalEssentialsCourseUnsupervisedLearning_Part2_21Sep2023.Rmd
@@ -252,6 +252,8 @@ noGeneFive      = addedNoiseData %>% select(-contains("Gene 5"))
 
 #remember that the data is in
 dataforClustering
+#you start from that, and add noisy dimensions, do pca and clustering and plotting, etc.
+
 
 #######################################
 ###
